# json_tracer

./: CMakeLists.txt  LICENSE  README.md  benchmark.sh  build.sh  config.sh  run.sh  test.sh
include/: address_lookup.h  args.h  error.h  extra_debug_info.h  filter.h  instr_vals_buffer.h  json_generation.h  module_set.h  query.h  trace_entry.h
scripts/: eraser_lockset.py  file_coverage.py  human_readable_output.py  program_load.py
src/: address_lookup.c  args.c  client.c  extra_debug_info.c  filter.c  insert_instrumentation.c  instr_vals_buffer.c  json_generation.c  module_debug_info_init.c  module_query.c  module_set.c  query.c  trace_information.c
test/: CMakeLists.txt
test/scripts/: eraser_lockset.py
test/src/: tests.c
test/sum/: CMakeLists.txt
test/sum/src/: summariser.cpp
tracer_client/: CMakeLists.txt  args.c  client.c  filter.c  filter.h  insert_instrumentation.c  insert_instrumentation.h  instr_vals_buffer.c  json_generation.c  module_debug_info.h  module_debug_info_init.c  module_query.c  query.c  query.h  thread.c  thread.h  trace_entry.c  trace_entry.h  trace_information.c  trace_information.h
